@@ -1,6 +1,7 @@
 package org.openxava.test.model;
 
 import javax.persistence.*;
+
 import org.openxava.annotations.*;
 
 /**
@@ -10,6 +11,7 @@ import org.openxava.annotations.*;
 
 @Entity
 @Tab(properties="id, concept.accountForConcept.account") // Don't change property names, because a bug that fail only with: concept.accountForConcept.account, just for the names 
+// Don't add a view named OnlyName (that is already in Nameable) to test a case
 public class SlotMachine extends Nameable {
 	
 	@ManyToOne
